--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -11,19 +10,6 @@
         android:id="@+id/grid_view"
         android:text="@string/hello_world" android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:numColumns="3"/>
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
-
-<!--<GridView xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:id="@+id/grid_view"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:columnWidth="90dp"-->
-    <!--android:numColumns="auto_fit"-->
-    <!--android:verticalSpacing="10dp"-->
-    <!--android:horizontalSpacing="10dp"-->
-    <!--android:stretchMode="columnWidth"-->
-    <!--android:gravity="center"-->
-    <!--/>-->
