--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/grid_view"
         android:text="@string/hello_world" android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:numColumns="1"/>
 
 </RelativeLayout>
