--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,9 +2,9 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <EditTextPreference
-          android:title="@string/pref_location_label"
-          android:key="@string/pref_location_key"
-          android:defaultValue="@string/pref_location_default"
+          android:title="@string/pref_nickname_label"
+          android:key="@string/pref_nickname"
+          android:defaultValue="@string/pref_nickname_default"
           android:inputType="text"
             android:singleLine="true" />
 
