--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -7,5 +7,11 @@
           android:defaultValue="@string/pref_nickname_default"
           android:inputType="text"
             android:singleLine="true" />
+    <ListPreference     android:title="Sorting"
+        android:summary="Select how films should be sorted"
+        android:key="sorting"
+        android:defaultValue="@string/pref_sorting_default"
+        android:entries="@array/Sortings"
+        android:entryValues="@array/SortingsVal" />
 
 </PreferenceScreen>
