--- a/app/src/main/res/menu/menu_movie_detail.xml
+++ b/app/src/main/res/menu/menu_movie_detail.xml
@@ -3,5 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.android.studyproject.movieDetailActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+        app:showAsAction="never" />
+
+    <item android:id="@+id/menu_item_share"
+        android:showAsAction="always"
+        android:title="@string/action_share"
+        android:actionProviderClass=
+            "android.support.v7.widget.ShareActionProvider" />
 </menu>
