--- a/app/src/main/res/menu/menu_fragment.xml
+++ b/app/src/main/res/menu/menu_fragment.xml
@@ -2,6 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
+    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+        app:showAsAction="never" />
     <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
         app:showAsAction="never" />
     <item android:id="@+id/action_cinema_map" android:title="@string/action_cinema_map_show"
